k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: faraja-backend-svc
  namespace: faraja-ns
  labels:
    app: faraja
spec:
  selector:
    app: faraja
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    targetPort: backend-port
