k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: faraja-ns
  labels:
    app: frontend
    tier: frontend
    team: cne01
    project: faraja
spec:
  type: LoadBalancer
  selector:
    app: frontend
    tier: frontend
  ports:
  - port: 3001
    targetPort: 3001
    nodePort: 30001
    protocol: TCP
    name: http
