k8s/postgres-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: faraja-db-headless
  namespace: faraja-ns
  labels:
    app: postgres
    tier: database
    team: cne01
    environment: development
    project: faraja
spec:
  clusterIP: None
  selector:
    app: postgres
    tier: database
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
